tests/error_display/hll_undeclared_variable.err.expected
error: at 7:13: [HTC-UndeclaredVariable] In function 'undeclared_variable': undeclared variable 'y'
   |
 7 |     let x = y;
   |             ^
